--- a/src/output.css
+++ b/src/output.css
@@ -9,10 +9,7 @@
       "Courier New", monospace;
     --color-red-500: oklch(0.637 0.237 25.331);
     --color-amber-100: oklch(0.962 0.059 95.617);
-    --color-amber-200: oklch(0.924 0.12 95.746);
-    --color-amber-300: oklch(0.879 0.169 91.605);
     --color-amber-500: oklch(0.769 0.188 70.08);
-    --color-amber-600: oklch(0.666 0.179 58.318);
     --color-blue-300: oklch(0.809 0.105 251.813);
     --color-blue-500: oklch(0.623 0.214 259.815);
     --color-blue-600: oklch(0.546 0.245 262.881);
@@ -25,11 +22,10 @@
     --color-gray-500: oklch(0.551 0.027 264.364);
     --color-gray-600: oklch(0.446 0.03 256.802);
     --color-gray-700: oklch(0.373 0.034 259.733);
+    --color-gray-800: oklch(0.278 0.033 256.848);
     --color-gray-900: oklch(0.21 0.034 264.665);
     --color-white: #fff;
     --spacing: 0.25rem;
-    --container-3xs: 16rem;
-    --container-md: 28rem;
     --container-2xl: 42rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
@@ -391,9 +387,6 @@
       max-width: 96rem !important;
     }
   }
-  .mx-auto {
-    margin-inline: auto;
-  }
   .me-2 {
     margin-inline-end: calc(var(--spacing) * 2);
   }
@@ -423,6 +416,9 @@
   }
   .mb-10 {
     margin-bottom: calc(var(--spacing) * 10);
+  }
+  .ml-\[3\%\] {
+    margin-left: 3%;
   }
   .ml-\[5\%\] {
     margin-left: 5%;
@@ -535,14 +531,35 @@
   .h-10\.5 {
     height: calc(var(--spacing) * 10.5);
   }
-  .h-75 {
-    height: calc(var(--spacing) * 75);
-  }
   .h-100 {
     height: calc(var(--spacing) * 100);
   }
+  .h-150 {
+    height: calc(var(--spacing) * 150);
+  }
   .h-screen {
     height: 100vh;
+  }
+  .max-h-\[10\] {
+    max-height: 10;
+  }
+  .max-h-\[20\] {
+    max-height: 20;
+  }
+  .max-h-\[60\] {
+    max-height: 60;
+  }
+  .max-h-\[100px\] {
+    max-height: 100px;
+  }
+  .max-h-\[540\] {
+    max-height: 540;
+  }
+  .max-h-\[540px\] {
+    max-height: 540px;
+  }
+  .max-h-\[1080\] {
+    max-height: 1080;
   }
   .max-h-none {
     max-height: none;
@@ -562,17 +579,11 @@
   .w-2xl {
     width: var(--container-2xl);
   }
-  .w-3xs {
-    width: var(--container-3xs);
-  }
   .w-4 {
     width: calc(var(--spacing) * 4);
   }
   .w-5 {
     width: calc(var(--spacing) * 5);
-  }
-  .w-8 {
-    width: calc(var(--spacing) * 8);
   }
   .w-10 {
     width: calc(var(--spacing) * 10);
@@ -586,6 +597,15 @@
   .w-75 {
     width: calc(var(--spacing) * 75);
   }
+  .w-100 {
+    width: calc(var(--spacing) * 100);
+  }
+  .w-150 {
+    width: calc(var(--spacing) * 150);
+  }
+  .w-500 {
+    width: calc(var(--spacing) * 500);
+  }
   .w-\[100\%\] {
     width: 100%;
   }
@@ -595,8 +615,23 @@
   .w-screen {
     width: 100vw;
   }
-  .max-w-md {
-    max-width: var(--container-md);
+  .max-w-\[10\] {
+    max-width: 10;
+  }
+  .max-w-\[20\] {
+    max-width: 20;
+  }
+  .max-w-\[60\] {
+    max-width: 60;
+  }
+  .max-w-\[100px\] {
+    max-width: 100px;
+  }
+  .max-w-\[540px\] {
+    max-width: 540px;
+  }
+  .max-w-\[1080px\] {
+    max-width: 1080px;
   }
   .max-w-none {
     max-width: none;
@@ -1015,9 +1050,6 @@
       --tw-space-x-reverse: 1;
     }
   }
-  .gap-y-5 {
-    row-gap: calc(var(--spacing) * 5);
-  }
   .gap-y-7 {
     row-gap: calc(var(--spacing) * 7);
   }
@@ -1246,17 +1278,8 @@
   .bg-\[var\(--my_variable\)\] {
     background-color: var(--my_variable);
   }
-  .bg-amber-200 {
-    background-color: var(--color-amber-200);
-  }
-  .bg-amber-300 {
-    background-color: var(--color-amber-300);
-  }
   .bg-amber-500 {
     background-color: var(--color-amber-500);
-  }
-  .bg-amber-600 {
-    background-color: var(--color-amber-600);
   }
   .bg-blue-600 {
     background-color: var(--color-blue-600);
@@ -1269,6 +1292,9 @@
   }
   .bg-gray-200 {
     background-color: var(--color-gray-200);
+  }
+  .bg-gray-800 {
+    background-color: var(--color-gray-800);
   }
   .bg-gray-900 {
     background-color: var(--color-gray-900);
@@ -1453,9 +1479,6 @@
   }
   .p-6 {
     padding: calc(var(--spacing) * 6);
-  }
-  .p-8 {
-    padding: calc(var(--spacing) * 8);
   }
   .p-10 {
     padding: calc(var(--spacing) * 10);
