--- a/src/output.css
+++ b/src/output.css
@@ -9,6 +9,7 @@
       "Courier New", monospace;
     --color-red-500: oklch(0.637 0.237 25.331);
     --color-amber-100: oklch(0.962 0.059 95.617);
+    --color-amber-200: oklch(0.924 0.12 95.746);
     --color-amber-500: oklch(0.769 0.188 70.08);
     --color-blue-300: oklch(0.809 0.105 251.813);
     --color-blue-500: oklch(0.623 0.214 259.815);
@@ -24,11 +25,18 @@
     --color-gray-700: oklch(0.373 0.034 259.733);
     --color-gray-800: oklch(0.278 0.033 256.848);
     --color-gray-900: oklch(0.21 0.034 264.665);
+    --color-gray-950: oklch(0.13 0.028 261.692);
+    --color-neutral-700: oklch(0.371 0 0);
+    --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-2xl: 42rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
+    --text-xl: 1.25rem;
+    --text-xl--line-height: calc(1.75 / 1.25);
+    --text-2xl: 1.5rem;
+    --text-2xl--line-height: calc(2 / 1.5);
     --text-3xl: 1.875rem;
     --text-3xl--line-height: calc(2.25 / 1.875);
     --text-4xl: 2.25rem;
@@ -264,11 +272,23 @@
   .start-0 {
     inset-inline-start: calc(var(--spacing) * 0);
   }
+  .start-1 {
+    inset-inline-start: calc(var(--spacing) * 1);
+  }
+  .start-1\/2 {
+    inset-inline-start: calc(1/2 * 100%);
+  }
   .end-2 {
     inset-inline-end: calc(var(--spacing) * 2);
   }
   .end-2\.5 {
     inset-inline-end: calc(var(--spacing) * 2.5);
+  }
+  .top-1 {
+    top: calc(var(--spacing) * 1);
+  }
+  .top-1\/2 {
+    top: calc(1/2 * 100%);
   }
   .bottom-2 {
     bottom: calc(var(--spacing) * 2);
@@ -390,23 +410,59 @@
   .me-2 {
     margin-inline-end: calc(var(--spacing) * 2);
   }
+  .mt-0 {
+    margin-top: calc(var(--spacing) * 0);
+  }
+  .mt-0\.5 {
+    margin-top: calc(var(--spacing) * 0.5);
+  }
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
   }
   .mt-1\.5 {
     margin-top: calc(var(--spacing) * 1.5);
   }
+  .mt-4 {
+    margin-top: calc(var(--spacing) * 4);
+  }
   .mt-20 {
     margin-top: calc(var(--spacing) * 20);
+  }
+  .mt-\[\%\] {
+    margin-top: %;
+  }
+  .mt-\[1\%\] {
+    margin-top: 1%;
   }
   .mt-\[2\%\] {
     margin-top: 2%;
   }
-  .mt-\[5\%\] {
-    margin-top: 5%;
+  .mt-\[4\%\] {
+    margin-top: 4%;
   }
   .mt-\[10\%\] {
     margin-top: 10%;
+  }
+  .mt-\[15\%\] {
+    margin-top: 15%;
+  }
+  .mt-\[20\%\] {
+    margin-top: 20%;
+  }
+  .mt-\[25\%\] {
+    margin-top: 25%;
+  }
+  .mt-\[35\%\] {
+    margin-top: 35%;
+  }
+  .mt-\[55\%\] {
+    margin-top: 55%;
+  }
+  .mt-\[60\%\] {
+    margin-top: 60%;
+  }
+  .mt-\[100\%\] {
+    margin-top: 100%;
   }
   .mr-\[7\%\] {
     margin-right: 7%;
@@ -416,9 +472,6 @@
   }
   .mb-10 {
     margin-bottom: calc(var(--spacing) * 10);
-  }
-  .ml-\[3\%\] {
-    margin-left: 3%;
   }
   .ml-\[5\%\] {
     margin-left: 5%;
@@ -513,6 +566,14 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
+  .size-40 {
+    width: calc(var(--spacing) * 40);
+    height: calc(var(--spacing) * 40);
+  }
+  .size-full {
+    width: 100%;
+    height: 100%;
+  }
   .h-2 {
     height: calc(var(--spacing) * 2);
   }
@@ -531,35 +592,26 @@
   .h-10\.5 {
     height: calc(var(--spacing) * 10.5);
   }
-  .h-100 {
-    height: calc(var(--spacing) * 100);
-  }
-  .h-150 {
-    height: calc(var(--spacing) * 150);
-  }
   .h-screen {
     height: 100vh;
   }
-  .max-h-\[10\] {
-    max-height: 10;
+  .max-h-10 {
+    max-height: calc(var(--spacing) * 10);
   }
-  .max-h-\[20\] {
-    max-height: 20;
+  .max-h-12 {
+    max-height: calc(var(--spacing) * 12);
   }
-  .max-h-\[60\] {
-    max-height: 60;
+  .max-h-15 {
+    max-height: calc(var(--spacing) * 15);
   }
-  .max-h-\[100px\] {
-    max-height: 100px;
+  .max-h-\[18px\] {
+    max-height: 18px;
   }
-  .max-h-\[540\] {
-    max-height: 540;
+  .max-h-\[25px\] {
+    max-height: 25px;
   }
   .max-h-\[540px\] {
     max-height: 540px;
-  }
-  .max-h-\[1080\] {
-    max-height: 1080;
   }
   .max-h-none {
     max-height: none;
@@ -597,15 +649,6 @@
   .w-75 {
     width: calc(var(--spacing) * 75);
   }
-  .w-100 {
-    width: calc(var(--spacing) * 100);
-  }
-  .w-150 {
-    width: calc(var(--spacing) * 150);
-  }
-  .w-500 {
-    width: calc(var(--spacing) * 500);
-  }
   .w-\[100\%\] {
     width: 100%;
   }
@@ -615,23 +658,26 @@
   .w-screen {
     width: 100vw;
   }
-  .max-w-\[10\] {
-    max-width: 10;
+  .max-w-10 {
+    max-width: calc(var(--spacing) * 10);
   }
-  .max-w-\[20\] {
-    max-width: 20;
+  .max-w-20 {
+    max-width: calc(var(--spacing) * 20);
   }
-  .max-w-\[60\] {
-    max-width: 60;
+  .max-w-50 {
+    max-width: calc(var(--spacing) * 50);
   }
-  .max-w-\[100px\] {
-    max-width: 100px;
+  .max-w-\[15px\] {
+    max-width: 15px;
+  }
+  .max-w-\[25px\] {
+    max-width: 25px;
+  }
+  .max-w-\[50\%\] {
+    max-width: 50%;
   }
   .max-w-\[540px\] {
     max-width: 540px;
-  }
-  .max-w-\[1080px\] {
-    max-width: 1080px;
   }
   .max-w-none {
     max-width: none;
@@ -724,6 +770,22 @@
     --tw-translate-y: 100%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
+  .-translate-x-1 {
+    --tw-translate-x: calc(var(--spacing) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-x-1\/2 {
+    --tw-translate-x: calc(calc(1/2 * 100%) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-1 {
+    --tw-translate-y: calc(var(--spacing) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-1\/2 {
+    --tw-translate-y: calc(calc(1/2 * 100%) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
   .translate-3d {
     translate: var(--tw-translate-x) var(--tw-translate-y) var(--tw-translate-z);
   }
@@ -735,6 +797,9 @@
   }
   .scale-none {
     scale: none;
+  }
+  .-rotate-90 {
+    rotate: calc(90deg * -1);
   }
   .rotate-none {
     rotate: none;
@@ -1034,8 +1099,23 @@
   .gap-3 {
     gap: calc(var(--spacing) * 3);
   }
+  .gap-4 {
+    gap: calc(var(--spacing) * 4);
+  }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
+  }
+  .gap-6 {
+    gap: calc(var(--spacing) * 6);
+  }
+  .gap-10 {
+    gap: calc(var(--spacing) * 10);
+  }
+  .gap-25 {
+    gap: calc(var(--spacing) * 25);
+  }
+  .gap-\[5\%\] {
+    gap: 5%;
   }
   .space-y-reverse {
     :where(& > :not(:last-child)) {
@@ -1049,6 +1129,12 @@
     :where(& > :not(:last-child)) {
       --tw-space-x-reverse: 1;
     }
+  }
+  .gap-y-5 {
+    row-gap: calc(var(--spacing) * 5);
+  }
+  .gap-y-6 {
+    row-gap: calc(var(--spacing) * 6);
   }
   .gap-y-7 {
     row-gap: calc(var(--spacing) * 7);
@@ -1194,6 +1280,10 @@
     border-bottom-right-radius: 0.25rem;
     border-bottom-left-radius: 0.25rem;
   }
+  .rounded-b-full {
+    border-bottom-right-radius: calc(infinity * 1px);
+    border-bottom-left-radius: calc(infinity * 1px);
+  }
   .rounded-br {
     border-bottom-right-radius: 0.25rem;
   }
@@ -1269,6 +1359,9 @@
   .bg-\(color\:--my-color\) {
     background-color: var(--my-color);
   }
+  .bg-\[\#34c759\] {
+    background-color: #34c759;
+  }
   .bg-\[\#0088cc\] {
     background-color: #0088cc;
   }
@@ -1280,6 +1373,9 @@
   }
   .bg-amber-500 {
     background-color: var(--color-amber-500);
+  }
+  .bg-black {
+    background-color: var(--color-black);
   }
   .bg-blue-600 {
     background-color: var(--color-blue-600);
@@ -1298,6 +1394,9 @@
   }
   .bg-gray-900 {
     background-color: var(--color-gray-900);
+  }
+  .bg-gray-950 {
+    background-color: var(--color-gray-950);
   }
   .bg-red-500 {
     background-color: var(--color-red-500);
@@ -1429,6 +1528,9 @@
   .fill-none {
     fill: none;
   }
+  .stroke-current {
+    stroke: currentColor;
+  }
   .stroke-none {
     stroke: none;
   }
@@ -1474,6 +1576,12 @@
   .object-top {
     object-position: top;
   }
+  .p-2 {
+    padding: calc(var(--spacing) * 2);
+  }
+  .p-3 {
+    padding: calc(var(--spacing) * 3);
+  }
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
@@ -1500,6 +1608,24 @@
   }
   .ps-10 {
     padding-inline-start: calc(var(--spacing) * 10);
+  }
+  .pt-2 {
+    padding-top: calc(var(--spacing) * 2);
+  }
+  .pt-4 {
+    padding-top: calc(var(--spacing) * 4);
+  }
+  .pr-3 {
+    padding-right: calc(var(--spacing) * 3);
+  }
+  .pb-2 {
+    padding-bottom: calc(var(--spacing) * 2);
+  }
+  .pb-4 {
+    padding-bottom: calc(var(--spacing) * 4);
+  }
+  .pl-3 {
+    padding-left: calc(var(--spacing) * 3);
   }
   .text-center {
     text-align: center;
@@ -1543,6 +1669,10 @@
   .align-top {
     vertical-align: top;
   }
+  .text-2xl {
+    font-size: var(--text-2xl);
+    line-height: var(--tw-leading, var(--text-2xl--line-height));
+  }
   .text-3xl {
     font-size: var(--text-3xl);
     line-height: var(--tw-leading, var(--text-3xl--line-height));
@@ -1554,6 +1684,10 @@
   .text-sm {
     font-size: var(--text-sm);
     line-height: var(--tw-leading, var(--text-sm--line-height));
+  }
+  .text-xl {
+    font-size: var(--text-xl);
+    line-height: var(--tw-leading, var(--text-xl--line-height));
   }
   .leading-none {
     --tw-leading: 1;
@@ -1650,6 +1784,15 @@
   }
   .text-amber-100 {
     color: var(--color-amber-100);
+  }
+  .text-amber-200 {
+    color: var(--color-amber-200);
+  }
+  .text-blue-600 {
+    color: var(--color-blue-600);
+  }
+  .text-gray-200 {
+    color: var(--color-gray-200);
   }
   .text-gray-500 {
     color: var(--color-gray-500);
@@ -2147,9 +2290,19 @@
       background-color: var(--color-gray-700);
     }
   }
+  .dark\:text-blue-500 {
+    @media (prefers-color-scheme: dark) {
+      color: var(--color-blue-500);
+    }
+  }
   .dark\:text-gray-400 {
     @media (prefers-color-scheme: dark) {
       color: var(--color-gray-400);
+    }
+  }
+  .dark\:text-neutral-700 {
+    @media (prefers-color-scheme: dark) {
+      color: var(--color-neutral-700);
     }
   }
   .dark\:text-white {
