--- a/src/output.css
+++ b/src/output.css
@@ -11,12 +11,14 @@
     --color-amber-100: oklch(0.962 0.059 95.617);
     --color-amber-200: oklch(0.924 0.12 95.746);
     --color-amber-500: oklch(0.769 0.188 70.08);
+    --color-amber-700: oklch(0.555 0.163 48.998);
     --color-blue-300: oklch(0.809 0.105 251.813);
     --color-blue-500: oklch(0.623 0.214 259.815);
     --color-blue-600: oklch(0.546 0.245 262.881);
     --color-blue-700: oklch(0.488 0.243 264.376);
     --color-blue-800: oklch(0.424 0.199 265.638);
     --color-gray-50: oklch(0.985 0.002 247.839);
+    --color-gray-100: oklch(0.967 0.003 264.542);
     --color-gray-200: oklch(0.928 0.006 264.531);
     --color-gray-300: oklch(0.872 0.01 258.338);
     --color-gray-400: oklch(0.707 0.022 261.325);
@@ -25,11 +27,11 @@
     --color-gray-700: oklch(0.373 0.034 259.733);
     --color-gray-800: oklch(0.278 0.033 256.848);
     --color-gray-900: oklch(0.21 0.034 264.665);
-    --color-gray-950: oklch(0.13 0.028 261.692);
     --color-neutral-700: oklch(0.371 0 0);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
+    --container-xs: 20rem;
     --container-2xl: 42rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
@@ -41,6 +43,8 @@
     --text-3xl--line-height: calc(2.25 / 1.875);
     --text-4xl: 2.25rem;
     --text-4xl--line-height: calc(2.5 / 2.25);
+    --text-5xl: 3rem;
+    --text-5xl--line-height: 1;
     --font-weight-light: 300;
     --font-weight-normal: 400;
     --font-weight-medium: 500;
@@ -407,6 +411,9 @@
       max-width: 96rem !important;
     }
   }
+  .mx-auto {
+    margin-inline: auto;
+  }
   .me-2 {
     margin-inline-end: calc(var(--spacing) * 2);
   }
@@ -422,14 +429,11 @@
   .mt-1\.5 {
     margin-top: calc(var(--spacing) * 1.5);
   }
-  .mt-4 {
-    margin-top: calc(var(--spacing) * 4);
+  .mt-2 {
+    margin-top: calc(var(--spacing) * 2);
   }
   .mt-20 {
     margin-top: calc(var(--spacing) * 20);
-  }
-  .mt-\[\%\] {
-    margin-top: %;
   }
   .mt-\[1\%\] {
     margin-top: 1%;
@@ -440,29 +444,20 @@
   .mt-\[4\%\] {
     margin-top: 4%;
   }
+  .mt-\[4px\] {
+    margin-top: 4px;
+  }
   .mt-\[10\%\] {
     margin-top: 10%;
-  }
-  .mt-\[15\%\] {
-    margin-top: 15%;
-  }
-  .mt-\[20\%\] {
-    margin-top: 20%;
   }
   .mt-\[25\%\] {
     margin-top: 25%;
   }
-  .mt-\[35\%\] {
-    margin-top: 35%;
+  .mr-\[3\%\] {
+    margin-right: 3%;
   }
-  .mt-\[55\%\] {
-    margin-top: 55%;
-  }
-  .mt-\[60\%\] {
-    margin-top: 60%;
-  }
-  .mt-\[100\%\] {
-    margin-top: 100%;
+  .mr-\[5\%\] {
+    margin-right: 5%;
   }
   .mr-\[7\%\] {
     margin-right: 7%;
@@ -473,11 +468,26 @@
   .mb-10 {
     margin-bottom: calc(var(--spacing) * 10);
   }
+  .mb-\[1rem\] {
+    margin-bottom: 1rem;
+  }
+  .ml-10 {
+    margin-left: calc(var(--spacing) * 10);
+  }
   .ml-\[5\%\] {
     margin-left: 5%;
   }
   .ml-\[7\%\] {
     margin-left: 7%;
+  }
+  .ml-\[10rem\] {
+    margin-left: 10rem;
+  }
+  .ml-\[15rem\] {
+    margin-left: 15rem;
+  }
+  .ml-\[16rem\] {
+    margin-left: 16rem;
   }
   .box-border {
     box-sizing: border-box;
@@ -580,6 +590,9 @@
   .h-2\.5 {
     height: calc(var(--spacing) * 2.5);
   }
+  .h-3 {
+    height: calc(var(--spacing) * 3);
+  }
   .h-4 {
     height: calc(var(--spacing) * 4);
   }
@@ -592,23 +605,35 @@
   .h-10\.5 {
     height: calc(var(--spacing) * 10.5);
   }
+  .h-11 {
+    height: calc(var(--spacing) * 11);
+  }
   .h-screen {
     height: 100vh;
-  }
-  .max-h-10 {
-    max-height: calc(var(--spacing) * 10);
-  }
-  .max-h-12 {
-    max-height: calc(var(--spacing) * 12);
-  }
-  .max-h-15 {
-    max-height: calc(var(--spacing) * 15);
   }
   .max-h-\[18px\] {
     max-height: 18px;
   }
   .max-h-\[25px\] {
     max-height: 25px;
+  }
+  .max-h-\[40px\] {
+    max-height: 40px;
+  }
+  .max-h-\[50px\] {
+    max-height: 50px;
+  }
+  .max-h-\[180px\] {
+    max-height: 180px;
+  }
+  .max-h-\[200px\] {
+    max-height: 200px;
+  }
+  .max-h-\[280px\] {
+    max-height: 280px;
+  }
+  .max-h-\[360px\] {
+    max-height: 360px;
   }
   .max-h-\[540px\] {
     max-height: 540px;
@@ -631,6 +656,9 @@
   .w-2xl {
     width: var(--container-2xl);
   }
+  .w-3 {
+    width: calc(var(--spacing) * 3);
+  }
   .w-4 {
     width: calc(var(--spacing) * 4);
   }
@@ -649,6 +677,30 @@
   .w-75 {
     width: calc(var(--spacing) * 75);
   }
+  .w-\[15em\] {
+    width: 15em;
+  }
+  .w-\[15m\] {
+    width: 15m;
+  }
+  .w-\[15rem\] {
+    width: 15rem;
+  }
+  .w-\[16em\] {
+    width: 16em;
+  }
+  .w-\[18em\] {
+    width: 18em;
+  }
+  .w-\[20em\] {
+    width: 20em;
+  }
+  .w-\[25m\] {
+    width: 25m;
+  }
+  .w-\[45m\] {
+    width: 45m;
+  }
   .w-\[100\%\] {
     width: 100%;
   }
@@ -658,14 +710,14 @@
   .w-screen {
     width: 100vw;
   }
-  .max-w-10 {
-    max-width: calc(var(--spacing) * 10);
+  .max-w-\[8rem\] {
+    max-width: 8rem;
   }
-  .max-w-20 {
-    max-width: calc(var(--spacing) * 20);
+  .max-w-\[12rem\] {
+    max-width: 12rem;
   }
-  .max-w-50 {
-    max-width: calc(var(--spacing) * 50);
+  .max-w-\[14rem\] {
+    max-width: 14rem;
   }
   .max-w-\[15px\] {
     max-width: 15px;
@@ -673,8 +725,26 @@
   .max-w-\[25px\] {
     max-width: 25px;
   }
+  .max-w-\[40px\] {
+    max-width: 40px;
+  }
   .max-w-\[50\%\] {
     max-width: 50%;
+  }
+  .max-w-\[50px\] {
+    max-width: 50px;
+  }
+  .max-w-\[180px\] {
+    max-width: 180px;
+  }
+  .max-w-\[200px\] {
+    max-width: 200px;
+  }
+  .max-w-\[280px\] {
+    max-width: 280px;
+  }
+  .max-w-\[360px\] {
+    max-width: 360px;
   }
   .max-w-\[540px\] {
     max-width: 540px;
@@ -684,6 +754,9 @@
   }
   .max-w-screen {
     max-width: 100vw;
+  }
+  .max-w-xs {
+    max-width: var(--container-xs);
   }
   .min-w-screen {
     min-width: 100vw;
@@ -1108,14 +1181,17 @@
   .gap-6 {
     gap: calc(var(--spacing) * 6);
   }
-  .gap-10 {
-    gap: calc(var(--spacing) * 10);
-  }
-  .gap-25 {
-    gap: calc(var(--spacing) * 25);
+  .gap-\[2\%\] {
+    gap: 2%;
   }
   .gap-\[5\%\] {
     gap: 5%;
+  }
+  .gap-\[10px\] {
+    gap: 10px;
+  }
+  .gap-\[10x\%\] {
+    gap: 10x%;
   }
   .space-y-reverse {
     :where(& > :not(:last-child)) {
@@ -1125,16 +1201,19 @@
   .gap-x-2 {
     column-gap: calc(var(--spacing) * 2);
   }
+  .gap-x-5 {
+    column-gap: calc(var(--spacing) * 5);
+  }
   .space-x-reverse {
     :where(& > :not(:last-child)) {
       --tw-space-x-reverse: 1;
     }
   }
+  .gap-y-3 {
+    row-gap: calc(var(--spacing) * 3);
+  }
   .gap-y-5 {
     row-gap: calc(var(--spacing) * 5);
-  }
-  .gap-y-6 {
-    row-gap: calc(var(--spacing) * 6);
   }
   .gap-y-7 {
     row-gap: calc(var(--spacing) * 7);
@@ -1242,12 +1321,20 @@
     border-start-start-radius: 0.25rem;
     border-end-start-radius: 0.25rem;
   }
+  .rounded-s-lg {
+    border-start-start-radius: var(--radius-lg);
+    border-end-start-radius: var(--radius-lg);
+  }
   .rounded-ss {
     border-start-start-radius: 0.25rem;
   }
   .rounded-e {
     border-start-end-radius: 0.25rem;
     border-end-end-radius: 0.25rem;
+  }
+  .rounded-e-lg {
+    border-start-end-radius: var(--radius-lg);
+    border-end-end-radius: var(--radius-lg);
   }
   .rounded-se {
     border-start-end-radius: 0.25rem;
@@ -1280,10 +1367,6 @@
     border-bottom-right-radius: 0.25rem;
     border-bottom-left-radius: 0.25rem;
   }
-  .rounded-b-full {
-    border-bottom-right-radius: calc(infinity * 1px);
-    border-bottom-left-radius: calc(infinity * 1px);
-  }
   .rounded-br {
     border-bottom-right-radius: 0.25rem;
   }
@@ -1297,6 +1380,10 @@
   .border-x {
     border-inline-style: var(--tw-border-style);
     border-inline-width: 1px;
+  }
+  .border-x-0 {
+    border-inline-style: var(--tw-border-style);
+    border-inline-width: 0px;
   }
   .border-y {
     border-block-style: var(--tw-border-style);
@@ -1374,6 +1461,9 @@
   .bg-amber-500 {
     background-color: var(--color-amber-500);
   }
+  .bg-amber-700 {
+    background-color: var(--color-amber-700);
+  }
   .bg-black {
     background-color: var(--color-black);
   }
@@ -1386,17 +1476,23 @@
   .bg-gray-50 {
     background-color: var(--color-gray-50);
   }
+  .bg-gray-100 {
+    background-color: var(--color-gray-100);
+  }
   .bg-gray-200 {
     background-color: var(--color-gray-200);
+  }
+  .bg-gray-500 {
+    background-color: var(--color-gray-500);
+  }
+  .bg-gray-700 {
+    background-color: var(--color-gray-700);
   }
   .bg-gray-800 {
     background-color: var(--color-gray-800);
   }
   .bg-gray-900 {
     background-color: var(--color-gray-900);
-  }
-  .bg-gray-950 {
-    background-color: var(--color-gray-950);
   }
   .bg-red-500 {
     background-color: var(--color-red-500);
@@ -1612,20 +1708,44 @@
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
   }
+  .pt-3 {
+    padding-top: calc(var(--spacing) * 3);
+  }
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
+  }
+  .pt-\[2px\] {
+    padding-top: 2px;
   }
   .pr-3 {
     padding-right: calc(var(--spacing) * 3);
   }
+  .pr-5 {
+    padding-right: calc(var(--spacing) * 5);
+  }
+  .pr-8 {
+    padding-right: calc(var(--spacing) * 8);
+  }
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
+  }
+  .pb-3 {
+    padding-bottom: calc(var(--spacing) * 3);
   }
   .pb-4 {
     padding-bottom: calc(var(--spacing) * 4);
   }
+  .pb-\[2px\] {
+    padding-bottom: 2px;
+  }
   .pl-3 {
     padding-left: calc(var(--spacing) * 3);
+  }
+  .pl-5 {
+    padding-left: calc(var(--spacing) * 5);
+  }
+  .pl-8 {
+    padding-left: calc(var(--spacing) * 8);
   }
   .text-center {
     text-align: center;
@@ -1680,6 +1800,10 @@
   .text-4xl {
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
+  }
+  .text-5xl {
+    font-size: var(--text-5xl);
+    line-height: var(--tw-leading, var(--text-5xl--line-height));
   }
   .text-sm {
     font-size: var(--text-sm);
@@ -2248,9 +2372,22 @@
       }
     }
   }
+  .hover\:bg-gray-200 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-gray-200);
+      }
+    }
+  }
   .focus\:border-blue-500 {
     &:focus {
       border-color: var(--color-blue-500);
+    }
+  }
+  .focus\:ring-2 {
+    &:focus {
+      --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentColor);
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
     }
   }
   .focus\:ring-4 {
@@ -2267,6 +2404,11 @@
   .focus\:ring-blue-500 {
     &:focus {
       --tw-ring-color: var(--color-blue-500);
+    }
+  }
+  .focus\:ring-gray-100 {
+    &:focus {
+      --tw-ring-color: var(--color-gray-100);
     }
   }
   .focus\:outline-none {
@@ -2326,6 +2468,15 @@
       }
     }
   }
+  .dark\:hover\:bg-gray-600 {
+    @media (prefers-color-scheme: dark) {
+      &:hover {
+        @media (hover: hover) {
+          background-color: var(--color-gray-600);
+        }
+      }
+    }
+  }
   .dark\:focus\:border-blue-500 {
     @media (prefers-color-scheme: dark) {
       &:focus {
@@ -2344,6 +2495,13 @@
     @media (prefers-color-scheme: dark) {
       &:focus {
         --tw-ring-color: var(--color-blue-800);
+      }
+    }
+  }
+  .dark\:focus\:ring-gray-700 {
+    @media (prefers-color-scheme: dark) {
+      &:focus {
+        --tw-ring-color: var(--color-gray-700);
       }
     }
   }
