--- a/src/output.css
+++ b/src/output.css
@@ -468,6 +468,12 @@
   .mt-\[2\%\] {
     margin-top: 2%;
   }
+  .mt-\[2rem\] {
+    margin-top: 2rem;
+  }
+  .mt-\[3rem\] {
+    margin-top: 3rem;
+  }
   .mt-\[4\%\] {
     margin-top: 4%;
   }
@@ -1623,8 +1629,8 @@
     --tw-gradient-position: in oklab;
     background-image: radial-gradient(var(--tw-gradient-stops));
   }
-  .bg-\[url\(\'\.\/assets\/images\/5\.jpg\'\)\] {
-    background-image: url('./assets/images/5.jpg');
+  .bg-\[url\(\'\.\.\/assets\/images\/5\.jpg\'\)\] {
+    background-image: url('../assets/images/5.jpg');
   }
   .bg-none {
     background-image: none;
